# cp2077-wheel-mod

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT_SUMMARY.md  DIRECTINPUT_IMPLEMENTATION_COMPLETE.md  INSTALLATION_GUIDE.md  IN_GAME_TESTING_GUIDE.md  LICENSE  NEXUS_README.md  NEXUS_RELEASE_CHECKLIST.md  NEXUS_UPLOAD.md  PLAN_sigfinder_pivot.md  README.md  STATUS.md  VEHICLE_INPUT_OVERRIDE_COMPLETE.md  build.ps1  cyberpunk_wheel_mod_instructions.md  deploy.ps1  mod_info.json
.claude/: settings.local.json
cyberpunk-g923-mod/: CHANGELOG.md  INSTALLATION_GUIDE.md  README.md  README_NEXUS.md  init.lua  mod_info.json
cyberpunk-g923-mod/fomod/: ModuleConfig.xml  info.xml
cyberpunk-g923-mod/modules/: config.lua  directinput.lua  force_feedback.lua  input_calibration.lua  input_handler.lua  installation_check.lua  performance_monitor.lua  real_directinput.lua  vehicle_control.lua  vehicle_input_override.lua
fomod/: ModuleConfig.xml  info.xml
fomod_configs/: config_handshake_off.json
gwheel/: CMakeLists.txt
gwheel/include/: gwheel_abi.h
gwheel/src/: audio_monitor.cpp  audio_monitor.h  button_map.cpp  button_map.h  config.cpp  config.h  device_table.cpp  device_table.h  dllmain.cpp  ffb.cpp  ffb.h  input_bindings.cpp  input_bindings.h  kbd_hook.cpp  kbd_hook.h  led.cpp  led.h  logging.cpp  logging.h  mod_settings_seed.cpp  mod_settings_seed.h  plugin.cpp  plugin.h  rtti.cpp  rtti.h  rtti_dump.cpp  rtti_dump.h  rtti_offsets.cpp  rtti_offsets.h  sources.cpp  sources.h  vehicle_hook.cpp  vehicle_hook.h  vehicle_hooks.cpp  vehicle_hooks.h  vehicle_physics_ext.h  wheel.cpp  wheel.h  wheel_device.cpp  wheel_device.h
gwheel_reds/: gwheel_events.reds  gwheel_menu.reds  gwheel_mount.reds  gwheel_natives.reds  gwheel_settings.reds  gwheel_surface.reds  gwheel_vehicle_override.reds  gwheel_vehicle_signals.reds
staging/: CHANGELOG.md  README.md
staging/fomod/: ModuleConfig.xml
staging/fomod_configs/: config_handshake_on.json
staging/gwheel_reds/: gwheel_natives.reds  gwheel_settings.reds
tools/input_probe/: CMakeLists.txt  input_probe.cpp
tools/sigfinder/: README.md  requirements.txt  sigfinder.py
tools/sigfinder/runs/: callers-steer-incar.json  callers-steer.json  candidates-brake.json  candidates-steer.json  candidates-throttle.json
tools/wheel_reset/: CMakeLists.txt  wheel_reset.cpp
